--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -15,6 +15,13 @@
       <p style="color:red;">恭喜他们！免费试用申请已经结束了，试用名单已经全部公布，没有成功的亲们下期活动再加油哦！</p>
     </div>
   </div>-->
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
+    <div class="panel-body">
+      <p>第一批 综合得分 250，邀请码使用 20 次, 点击次数 50 次以上  <!--<a href="/weixin/finallist/1/1/15012/">中奖名单&gt;&gt;</a>--></p>
+      <p style="color:red;">恭喜他们！试用通过名单次日10点公布，没有成功的亲们继续加油哦！</p>
+    </div>
+  </div>
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 审核结果</div>
@@ -33,29 +40,30 @@
          <div class="row">
 	    <div class="col-xs-12">
 	      <div class="thumbnail" style="padding:3px" id="id_i1">
-			<img src="https://mmbiz.qlogo.cn/mmbiz/ibbEWWCOYbuZwUVAyG9CWeHHow3eusqzDxa53iaLNjl5aniaVZtXbLxZLBk3SvibUETbvuEWGjkF1Cd8hPKm7q0BZw/0" alt="">
+					<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuvDdAbhYWkAMo8KlboQZibNZoZ3icrpdQ2iaj4pp7cJ6CvlKfHZsmAI0BMInJHvn2EUEsyI2oYD56Rw/0" alt="">
 	      </div>
 	     </div>
 	   </div>
-	   <p style="color:#029fd6">斗篷拍下链接：</p>
+	   <p style="color:#029fd6">睡袋拍下链接：</p>
 	   <div class="col-xs-12">
 	      <div class="thumbnail" style="padding:3px" id="id_i2">
-			<a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">
-			<img src="https://mmbiz.qlogo.cn/mmbiz/ibbEWWCOYbuYbqHaFxQiaPXj7gYSjGBC6GUnhgyKo6GNGw7sOztl6a8zINWjtZ8rxj8mAxsGMfsWXtHg4URwuRyQ/0" alt="">
+			<a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uI6MfirZ-FvDBJU4ALpBvJs&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">
+			<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvu5WdzhDicmHmlBpuga4YW6ibGu0FfFiaIPz3OicSibRVDjf7pSdSbEibO2O435ibuLRIdqicZtNzaic7XjLQ/0" alt="">
 			</a>
 	      </div>
 	     </div>
 	   </div>
       {% endif %}
-      
     <p style="color:#029fd6">审核说明：本次免费试用活动，将按照综合得分来审核申请。综合得分越高，审核通过几率越大！</p>
-    <p style="color:#029fd6">加分规则：</p>
-    <p style="color:#029fd6">a，只有微信好友的点击才会给你加分；</p>
-    <p style="color:#029fd6">b，每个微信用户只有前5次点击能给5位朋友的链接加分，超过5次后的点击不计加分；</p>
-    <p style="color:#029fd6">c，同一个手机上登录多个帐号相互点击不会加分；</p>
+    <p style="color:#029fd6">加分规则：
+    <ul style="color:#029fd6">
+     <li >只有微信好友的点击才会给你加分；</li>
+    	<li>每个微信用户只有前5次点击能给5位朋友的链接加分，超过5次后的点击不计加分；</li>
+    	<li>同一个手机上登录多个帐号相互点击不会加分；</li></ul></p>
     <p style="color:red">如果您的得分在100分以上，您将具有极大的竞争力！</p>
     <p>快快分享您的F码专属页面吧！ <a href="/weixin/sampleads/{{ wx_user.pk }}/">Go >></a></p>
     {% else %}
+    
       <p>您还没有申请试用,请点击 <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">申请免费试用>></a></p>
     {% endif %}
     </div>
