fix weixin invite result

--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -38,7 +38,7 @@
 	{% else %}
 	<a href="#" class="list-group-item">
 		{{ forloop.counter }}: {{ item.0 }}
-		<span class="badge">{{ item.2 }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.1 }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.3 }}</span>
+		<span class="badge">{{ item.2 }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.1 }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.3 }}</span>
 	</a>
 	{% endif %}
 	{% endfor %}
