--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -18,8 +18,8 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p>第一批 共36名 综合得分 370，邀请码使用 30 次, 点击次数 70 次以上  <!--<a href="/weixin/finallist/1/1/15012/">中奖名单&gt;&gt;</a>--></p>
-      <p style="color:red;">恭喜他们！试用通过名单次日10点公布，没有成功的亲们继续加油哦！</p>
+      <p>第一批  综合得分 370，邀请码使用 30 次, 点击次数 70 次以上  <a href="/weixin/finallist/1/1/15012/">中奖名单</a></p>
+      <p style="color:red;">恭喜他们！还有154个免费试用名额，没有成功的亲们继续加油哦！</p>
     </div>
   </div>
 
@@ -47,7 +47,7 @@
 	   <p style="color:#029fd6">睡袋拍下链接：</p>
 	   <div class="col-xs-12">
 	      <div class="thumbnail" style="padding:3px" id="id_i2">
-			<a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uI6MfirZ-FvDBJU4ALpBvJs&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">
+			<a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">
 			<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvu5WdzhDicmHmlBpuga4YW6ibGu0FfFiaIPz3OicSibRVDjf7pSdSbEibO2O435ibuLRIdqicZtNzaic7XjLQ/0" alt="">
 			</a>
 	      </div>
