--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -54,7 +54,7 @@
 	     </div>
 	   </div>
       {% endif %}
-    <p style="color:#029fd6">审核说明：本次免费试用活动，将按照综合得分来审核申请。综合得分越高，审核通过几率越大！</p>
+    <p style="color:#029fd6">审核说明：本次免费试用活动，将按照综合得分来审核申请。综合得分越高（即邀请码使用次数，点击次数都高），审核通过几率越大！</p>
     <p style="color:#029fd6">加分规则：
     <ul style="color:#029fd6">
      <li >只有微信好友的点击才会给你加分；</li>
