--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -34,7 +34,7 @@
 	    <p style="color:#e8792a">{{ sku.sku_name }}</p>
 	  </div>
 	</div>
-
+	<!--
 	<div class="row">
 	  <div class="col-xs-12">
 	    {% if wx_user.isvalid %}
@@ -61,6 +61,7 @@
 	</div>
 
 	<hr/>
+	
 	<div class="row">
 	  <div class="col-xs-12">
 	    <h5 style="color:red"><b>小调查</b></h5>
@@ -77,6 +78,9 @@
 	  <div class="col-xs-12" style="text-align:center">
 	    <input type="submit" class="btn btn-warning" value="确认提交"/>
 	  </div>
+	</div>-->
+	<div class="row">
+	  <div class="col-xs-12"><p>本期睡袋免费试用活动已经结束申请了，亲们下期活动再会！</p></div>
 	</div>
       </form>
     </div>
