--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" type="text/css" />
     <script src="{{ STATIC_URL }}jquery/jquery-1.9.1.min.js"></script>
     <script src="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.min.js"></script>
 	<!-- <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery.ui.datepicker-zh-CN.js.js" type="text/javascript" charset="gb2312"></script> -->
@@ -38,7 +38,7 @@
         .inner-filter{
             margin10px;     
         }
-        .inner-filter input{
+   			.inner-filter input{
  			width:40px;
  			height:24px;
             padding:1px; 
@@ -63,13 +63,16 @@
             margin-bottom:0px;
             background-color:#F1F1F1;
         }
+        #summary-table{
+        background-color:#3299CC;
+        }
     </style>
 </head>
 <body>
 {% with object.sale_stats as sale_stats %}
 <div class="container">
 <div class="outer-filter">
-<form  class="form-inline" method="POST" action="/items/product/sale/" >
+<form  class="form-inline" method="GET" action="/items/product/sale/" >
        <div class="div-inline">
          <label class="control-label" for="shop_id">选择店铺:</label>
          <select name="shop_id" class="selector">
@@ -114,58 +117,67 @@
     <button class="div-inline btn">过滤</button>
   </div>
   <div>
-  <table class="table table-bordered  table-condensed">
+  <table id="summary-table" class="table table-bordered table-condensed">
+	<thead>
     <tr>
-      <th class="col-xs-1">序号</th><th class="col-xs-2">商品/规格编码</th><th class="col-xs-3">商品/规格名称</th>
-      <th class="col-xs-1">销售数量</th><th class="col-xs-1">销售成本</th><th class="col-xs-1">销售额</th>
+      <th class="col-xs-1">序号</th><th class="col-xs-1">商品/规格码</th><th class="col-xs-2">商品/规格名称</th>
+      <th class="col-xs-1">销售数量</th><th class="col-xs-1">销售额</th><th class="col-xs-1">成交数量</th>
+      <th class="col-xs-1">成交额</th><th class="col-xs-1">成交成本</th>
       <th class="col-xs-1">退款</th><th class="col-xs-1">剩余库存</th><th class="col-xs-1">库存成本</th>
     </tr>
    <tr>
-   		<td>-</td>
+   		  <td>-</td>
         <td>-</td>
         <td >共计</td>
         <td>{{ sale_stats.total_sale_num }}</td>
-        <td>{{ sale_stats.total_sale_cost }}</td>
         <td>{{ sale_stats.total_sale_payment }}</td>
-        <td>{{ sale_stats.total_sale_refunds }}</td>
+        <td>{{ sale_stats.total_confirm_num }}</td>
+        <td>{{ sale_stats.total_confirm_payment }}</td>
+        <td>{{ sale_stats.total_confirm_cost }}</td>
+        <td>{{ sale_stats.total_sale_refund }}</td>
         <td>{{ sale_stats.total_stock_num }}</td>
-	<td>{{ sale_stats.total_stock_cost }}</td>
+					 <td>{{ sale_stats.total_stock_cost }}</td>
     </tr>
+  </thead>
   </table>
   </div>
   {% for product_id ,product in sale_stats.sale_items %}
   <div class="list-tables">
     <div class="list-table-head">
-      <table class="table table-bordered  table-condensed">
+      <table class="table table-bordered table-condensed">
         <tr>
         	<td class="col-xs-1">{{ forloop.counter }}</td>
-            <td class="col-xs-2">{{ product.outer_id }}</td>
-            <td class="col-xs-3">{{ product.name }}</td>
+            <td class="col-xs-1">{{ product.outer_id }}</td>
+            <td class="col-xs-2">{{ product.name }}</td>
             <td class="col-xs-1">{{ product.sale_num }}</td>
-            <td class="col-xs-1">{{ product.sale_cost }}</td>
             <td class="col-xs-1">{{ product.sale_payment }}</td>
-            <td class="col-xs-1">{{ product.sale_refunds }}</td>
+            <td class="col-xs-1">{{ product.confirm_num }}</td>
+            <td class="col-xs-1">{{ product.confirm_payment }}</td>
+            <td class="col-xs-1">{{ product.confirm_cost }}</td>
+            <td class="col-xs-1">{{ product.sale_refund }}</td>
             <td class="col-xs-1">{{ product.collect_num }}</td>
 	    	<td class="col-xs-1">{{ product.stock_cost }}</td>
         </tr>
     </table>
     </div>
     <div class="list-table-content">
-	<table class="table table-bordered  table-condensed">
+	  <table class="table table-bordered  table-condensed">
 	    {% for sku_id,sku in product.skus %}
         <tr>
         <td class="col-xs-1">{{ forloop.counter }}&nbsp;&gt;</td>
-		<td class="col-xs-2">{{ sku.outer_id }}</td>
-		<td class="col-xs-3">{{ sku.name }}</td>
-		<td class="col-xs-1">{{ sku.sale_num }}</td>
-		<td class="col-xs-1">{{ sku.sale_cost }}</td>
-		<td class="col-xs-1">{{ sku.sale_payment }}</td>
-        <td class="col-xs-1">{{ sku.sale_refund }}</td>
-        <td class="col-xs-1">{{ sku.quantity }}</td>
-		<td class="col-xs-1">{{ sku.stock_cost }}</td>
+					<td class="col-xs-1">{{ sku.outer_id }}</td>
+					<td class="col-xs-2">{{ sku.name }}</td>
+					<td class="col-xs-1">{{ sku.sale_num }}</td>
+					<td class="col-xs-1">{{ sku.sale_payment }}</td>
+					<td class="col-xs-1">{{ sku.confirm_num }}</td>
+        <td class="col-xs-1">{{ sku.confirm_payment }}</td>
+        <td class="col-xs-1">{{ sku.confirm_cost }}</td>
+			   <td class="col-xs-1">{{ sku.sale_refund }}</td>
+			   <td class="col-xs-1">{{ sku.quantity }}</td>
+					<td class="col-xs-1">{{ sku.stock_cost }}</td>
         </tr>
 	    {% endfor %}
-	</table>
+	  </table>
     </div>
   </div>
   {% endfor %}
@@ -174,20 +186,31 @@
 {% endwith %}
 </body>
 <script type="text/javascript">
-    $(function() {
-         $("#f_datepicker").datepicker({
-                dateFormat: "yy-mm-dd"
+ $(function(){
+   $("#f_datepicker").datepicker({
+     dateFormat: "yy-mm-dd"
          });
-        $("#t_datepicker").datepicker({
-                dateFormat: "yy-mm-dd"
+   $("#t_datepicker").datepicker({
+     dateFormat: "yy-mm-dd"
         });
     });
-    $(document).ready(function(){
+	$(document).ready(function(){
         $(".list-table-content").hide(); 
         $(".list-table-head").on("click",function(event){
                 $(this).next().toggle();   
         })
     });
-    
+	 $(function(){
+        //置顶按钮显示/隐藏实现
+    $(window).scroll(function(){
+        var w_height = $(window).height();//浏览器高度
+        var scroll_top = $(document).scrollTop();//滚动条到顶部的垂直高度
+        if(scroll_top > 100){
+         $("#summary-table").css("position" , "fixed").css("top","0").css("width",1140);
+        }else{
+         $("#summary-table").css("position" , "static");
+       		 		 }
+        	});
+       });
 </script>
 </html>
