fix weixin views

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -18,9 +18,6 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p>第一批  综合得分 370，邀请码使用 30 次, 点击次数 70 次以上  <a href="/weixin/finallist/1/1/15012/">中奖名单</a></p>
-      <p>第二批  综合得分 540，邀请码使用 46 次, 点击次数 80 次以上  <a href="/weixin/finallist/2/1/15012/">中奖名单</a></p>
-      <p>第三批  综合得分 475，邀请码使用 40 次, 点击次数 75 次以上  <a href="/weixin/finallist/3/1/15012/">中奖名单</a></p>
       <p style="color:red;">本期睡袋试用申请结束了，试用名单也已全部公布，恭喜获得本次免费试用机会的妈妈们,没有成功亲们下期活动加油哦！</p>
     </div>
   </div>
@@ -77,6 +74,7 @@
     <div class="panel-body">
       <p>亲们，若您的申请已审核通过，请仔细阅读审核页面的说明，务必在活动结束后<font style="color:red">5个工作日内</font>按照指示操作领取试用产品！不要忘记错过啦！</p>
       <p>为了保证活动的公正性和真实性，我们保留历史中奖名单供查询。</p>
+      <p><a href="/weixin/finallist/1/1/15012/">15年1月2期中奖名单 >></a></p>
       <p><a href="/weixin/finallist/1/1/15011/">15年1月1期中奖名单 >></a></p>
       <p><a href="/weixin/finallist/1/1/1410/">14年10月中奖名单 >></a></p>
       <p><a href="/weixin/finallist/1/1/1409/">14年9月中奖名单 >></a></p>
