--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -41,17 +41,17 @@
  	</div>
       </div>
     
-      <div class="row" style="margin-top:10px">
+      <!--<div class="row" style="margin-top:10px">
 	<div class="col-xs-2"></div>	  
 	<div class="col-xs-8" style="text-align:center">
-	  <!--<p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>-->
+	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  
           <p style="margin-top:16px">VIP邀请码：
 	  <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ fcode }}"/>
 	  </p>
 	</div>
 	<div class="col-xs-2"></div>
-      </div>
+      </div>-->
       
       <div class="row" style="text-align:center">
 	<p id="id_msg" style="text-align:center;color:red"></p>
