fix weixin freesample

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -54,8 +54,8 @@
       </div>-->
       
       <div class="row" style="text-align:center">
-	<p id="id_msg" style="text-align:center;color:red"></p>
-	<div class="col-xs-12" style="text-align:center; margin-top:16px">
+	<p id="id_msg" style="text-align:center;color:red">本期试用申请已经结束了，恭喜获得免费试用机会的妈妈们，没有成功亲们下期活动加油哦！</p>
+	<!--<div class="col-xs-12" style="text-align:center; margin-top:16px">
 	{% if order_exist %}
 	<p>亲，您的申请已经提交。</p>
 	<p><a href="/weixin/sampleads/{{ wx_user.pk }}/">分享您的VIP邀请码页面>></a></p>
@@ -67,7 +67,7 @@
 	  <p style="color:red;margin-top:10px">请提前关注【齐悦母婴惠】，申请待开放！</p>
         {% endif %}
 	{% endif %}
-	</div>
+	</div>--></div>
     </form>
   </div>
 </div>
