--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -33,74 +33,77 @@
 <script type="text/javascript">
   wx.config({
     debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-    appId: 'wxc2848fa1e1aa94b5', // 必填，公众号的唯一标识
-    timestamp: , // 必填，生成签名的时间戳
-    nonceStr: 'abadfa12434qafdafaee0321a', // 必填，生成签名的随机串
-    signature: '',// 必填，签名，见附录1
-    jsApiList: [] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+    appId: "{{ signkey.app_id }}", // 必填，公众号的唯一标识
+    timestamp: "{{ signkey.timestamp }}", // 必填，生成签名的时间戳
+    nonceStr: "{{ signkey.noncestr }}", // 必填，生成签名的随机串
+    signature: "{{ signkey.signature }}",// 必填，签名，见附录1
+    jsApiList: [ "onMenuShareTimeline",
+                 "onMenuShareAppMessage",
+                 "onMenuShareQQ" ,
+                 "onMenuShareWeibo"] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
   });
 </script>
-<!--
+
 <script type="text/javascript">  
 var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLRB3EMEibPzXZWs7XCPmBmqW8uzaCBBxYudU0PKYjmw0r7MOsoJ000\
 zg/0";
 var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
 var descContent = "十一月，感恩季。用我的一份感动，带给你一份惊喜。感谢有你！";
 var shareTitle = "小小礼物 感恩的心 感谢有你！";
-var appid = 'wxc2848fa1e1aa94b5';
 
-function shareFriend() {  
-    WeixinJSBridge.invoke('sendAppMessage',{  
-                            "appid": appid,  
-                            "img_url": imgUrl,  
-                            "img_width": "100",  
-                            "img_height": "100",  
-                            "link": lineLink,  
-                            "desc": descContent,  
-                            "title": shareTitle  
-                            }, function(res) {  
-                            _report('send_msg', res.err_msg);  
-                            })  
-}  
-function shareTimeline() {  
-    WeixinJSBridge.invoke('shareTimeline',{  
-                            "img_url": imgUrl,  
-                            "img_width": "100",  
-                            "img_height": "100",  
-                            "link": lineLink,  
-                            "desc": descContent,  
-                            "title": shareTitle  
-                            }, function(res) {  
-                            _report('timeline', res.err_msg);  
-                            });  
-}  
-function shareWeibo() {  
-    WeixinJSBridge.invoke('shareWeibo',{  
-                            "content": descContent,  
-                            "url": lineLink,  
-                            }, function(res) {  
-                            _report('weibo', res.err_msg);  
-                            });  
-}  
-// 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。  
-document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {  
-  
-        // 发送给好友  
-        WeixinJSBridge.on('menu:share:appmessage', function(argv){  
-            shareFriend();  
-            });  
-  
-        // 分享到朋友圈  
-        WeixinJSBridge.on('menu:share:timeline', function(argv){  
-            shareTimeline();  
-            });  
-  
-        // 分享到微博  
-        WeixinJSBridge.on('menu:share:weibo', function(argv){  
-            shareWeibo();  
-            });  
-        }, false);  
+wx.onMenuShareAppMessage({
+    title: shareTitle, // 分享标题
+    desc: descContent, // 分享描述
+    link: lineLink, // 分享链接
+    imgUrl: imgUrl, // 分享图标
+    type: 'link', // 分享类型,music、video或link，不填默认为link
+    dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+    success: function () { 
+        alter("给好友分享成功" );
+    },
+    cancel: function () { 
+        alter("取消分享" );
+    }
+});
+
 </script>  
+<!--wx.onMenuShareTimeline({
+        title: '', // 分享标题
+        link: '', // 分享链接
+        imgUrl: '', // 分享图标
+        success: function () { 
+            // 用户确认分享后执行的回调函数
+        },
+        cancel: function () { 
+            // 用户取消分享后执行的回调函数
+        }
+    });
+
+wx.onMenuShareWeibo({
+        title: '', // 分享标题
+        desc: '', // 分享描述
+        link: '', // 分享链接
+        imgUrl: '', // 分享图标
+        success: function () { 
+           // 用户确认分享后执行的回调函数
+        },
+        cancel: function () { 
+            // 用户取消分享后执行的回调函数
+        }
+    });
+
+wx.onMenuShareQQ({
+        title: '', // 分享标题
+        desc: '', // 分享描述
+        link: '', // 分享链接
+        imgUrl: '', // 分享图标
+        success: function () { 
+           // 用户确认分享后执行的回调函数
+        },
+        cancel: function () { 
+           // 用户取消分享后执行的回调函数
+        }
+    });
 -->
 
 {% endblock %}
