--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -65,7 +65,7 @@
 	  {% endif %}
           <p style="margin-top:16px">VIP邀请码：
 	    {% if wx_user.referal_from_openid %}
-	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ self_vipcode }}" disabled="disabled" />
+	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ self_vipcode }}" readonly="readonly" />
 	    {% else %}
 	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ fcode }}"/>
 	    {% endif %}
