--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -39,7 +39,7 @@
   global_timer =  window.setInterval(slideup, 3500);
 
   wx.config({
-    debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
     appId: "{{ signkey.app_id }}", // 必填，公众号的唯一标识
     timestamp: "{{ signkey.timestamp }}", // 必填，生成签名的时间戳
     nonceStr: "{{ signkey.noncestr }}", // 必填，生成签名的随机串
