--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -64,7 +64,7 @@
 	  <p>今日超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% endif %}
           <p style="margin-top:16px">VIP邀请码：
-	    {% if wx_user.referal_from_openid %}
+	    {% if wx_user.referal_from_openid and self_vipcode %}
 	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ self_vipcode }}" readonly="readonly" />
 	    {% else %}
 	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ fcode }}"/>
