fix weixin views and decorator

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -84,6 +84,9 @@ wx.onMenuShareTimeline({
         },
         cancel: function () { 
             console.log("取消分享" );
+        },
+        fail: function(){
+            console.log("分享失败")
         }
     });
 
