--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -38,6 +38,11 @@
 
   global_timer =  window.setInterval(slideup, 3500);
 
+var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLupibeUUTBbhbybLrhfNa2E5RT33NF7bs3zfYIicNNrX5bFVpmvEEstfIsa73ia4uodeiamOIte6T4p7A/0";
+var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
+var descContent = "自从有了娃，梦想中，他们睡觉是这样。。。";
+var shareTitle = "自从有了娃，睡袋免费拿！";
+
   wx.config({
     debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
     appId: "{{ signkey.app_id }}", // 必填，公众号的唯一标识
@@ -50,11 +55,8 @@
                  "onMenuShareWeibo"] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
   });
 
-var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLupibeUUTBbhbybLrhfNa2E5RT33NF7bs3zfYIicNNrX5bFVpmvEEstfIsa73ia4uodeiamOIte6T4p7A/0";
-var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
-var descContent = "自从有了娃，梦想中，他们睡觉是这样。。。";
-var shareTitle = "自从有了娃";
 
+  wx.ready(function () {
 wx.onMenuShareAppMessage({
     title: shareTitle, // 分享标题
     desc: descContent, // 分享描述
@@ -87,6 +89,7 @@ wx.onMenuShareTimeline({
         }
     });
 
+});
 
 </script>  
 
