fix trade merge handler

--- a/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
@@ -13,7 +13,7 @@
 
 {% block container %}
 <fieldset style="border:2px solid #E3E3E3">
-<legend>微信商品信息及库存更新表单</legend>
+<legend><h2>微信商品信息及库存更新表单</h2></legend>
 <div style="height:500px;overflow-y:scroll;" class="well">
 <table class="table table-bordered table-condensed">
 <thead>
