freesample html change

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -58,13 +58,13 @@
       <div class="row" style="margin-top:10px">
 	<div class="col-xs-2"></div>	  
 	<div class="col-xs-8" style="text-align:center">
-	  {% if order_number < 1000 %}
+	  {% if order_number < 600 %}
 	  <p>今日<font style="color:red; font-size:20px">{{ order_number }}</font>人已申请</p>
 	  {% else %}
-	  <p>今日超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
+	  <p>今日超过<font style="color:red; font-size:20px">600</font>人已申请</p>
 	  {% endif %}
           <p style="margin-top:16px">VIP邀请码：
-	    {% if wx_user.referal_from_openid %}
+	    {% if wx_user.referal_from_openid and self_vipcode %}
 	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ self_vipcode }}" readonly="readonly" />
 	    {% else %}
 	    <input class="form-control" type="text" id="id_vipcode" name="fcode" value="{{ fcode }}"/>
