fix items add scan storage

--- a/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
@@ -104,7 +104,7 @@
 			  <table class="table table-bordered  table-condensed">
 			  <thead>
 			    <tr style="background-color:#428BCA;">
-			      <th class="col-xs-1">--</th><th class="col-xs-2">--</th><th class="col-xs-1">--</th>
+			      <th class="col-xs-1">合计:</th><th class="col-xs-2">--</th><th class="col-xs-1">{{ object.total_num }}</th>
 			      <th class="col-xs-1">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th>
 			      <th class="col-xs-2">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th>
 			    </tr>
