--- a/shopmanager/templates/admin/items/change_list.html
+++ b/shopmanager/templates/admin/items/change_list.html
@@ -56,6 +56,10 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
+              <a href="/items/product/scan/" class="addlink" target="_blank">扫描入库
+              </a>
+            </li>
+            <li>
               <a href="/items/product/sale/" class="addlink" target="_blank">销量分析
               </a>
             </li>
