fix weixin orderinfo menu

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -69,8 +69,7 @@ wx.ready(function () {
             {share_link:lineLink,
              share_type:"APP",
              user_openid:user_openid},
-            function(res){console.log(res);},
-            "json");
+            function(res){console.log(res);});
     },
     cancel: function () { 
         console.log("取消分享" );
