fix weixin order info

--- a/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
@@ -7,10 +7,9 @@
       <option value="10">请选择</option>
 <!--      <option value="0">朋友圈晒单</option> -->
       {% if passed %}
-      <option value="4">100元免单</option>
-<!--
+<!--      <option value="4">100元免单</option>-->
       <option value="1">VIP 邀请</option>
--->
+
       {% else%}
       {% if score_passed %}
       <option value="2">10积分换购</option>
