--- a/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
@@ -116,7 +116,9 @@
 					    {% for sku_id,sku in trade.1.skus %}
 					    <tr class="{% if forloop.first and trade.1.cost >= trade.1.sales or sku.cost >= sku.sales %}label-warning{% endif %}">
 					    	{% if forloop.first %}
-					    	<td rowspan="{{ sku_len }}">{{ trade.0 }}</td>
+					    	<td rowspan="{{ sku_len }}">{{ trade.0 }}
+					    	   <p>买:[{{ product.sale_charger }}]</p>
+               <p>仓:[{{ product.storage_charger }}]</p></td>
 					    	<td rowspan="{{ sku_len }}">
 					    	  <a href="/admin/items/product/{{ trade.1.product_id }}/" target="_blank">
 					    	      <img src="{{ trade.1.pic_path }}" title="{{ trade.1.title }}" width="180px" height="80px" />
